--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,47 +1,50 @@
-name: CI
+name: Appium Tests
 
-on: [push]
+on: [push, pull_request]
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
+  connected-tests:
+    runs-on: macos-latest
 
     steps:
-    - name: Checkout code
+    - name: Checkout
       uses: actions/checkout@v2
 
     - name: Set up Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: 16
+        node-version: '14'
+
+    - name: Install yarn
+      run: npm install -g yarn
 
     - name: Install dependencies
       run: yarn install
 
-    - name: Set up JDK 17
+    - name: Set up JDK 11
       uses: actions/setup-java@v2
       with:
+        java-version: 11
         distribution: 'adopt'
-        java-version: '17'
+        cache: 'gradle'
 
-    - name: Set up Android SDK
-      uses: android-actions/setup-android@v2
+    - name: Run connected tests
+      uses: ReactiveCircus/android-emulator-runner@v2
+      with:
+        api-level: 30
+        target: google_apis
+        arch: x86_64
+        script: ./gradlew connectedCheck
 
-    - name: Create and start emulator
-      run: |
-        echo "y" | sdkmanager "system-images;android-30;google_apis;x86"
-        echo "no" | avdmanager create avd --force --name Pixel_3a_API_30_x86 --package "system-images;android-30;google_apis;x86" --device "pixel_3a"
-        $ANDROID_HOME/emulator/emulator -avd Pixel_3a_API_30_x86 -no-snapshot -no-window -no-audio -gpu swiftshader_indirect &
-        adb wait-for-device shell 'while [[ -z $(getprop sys.boot_completed) ]]; do sleep 1; done; input keyevent 82'
+    - name: Install Appium
+      run: npm install -g appium
 
-    - name: Install and start Appium
-      run: |
-        yarn global add appium@next
-        appium &
+    - name: Run Appium
+      run: appium &
 
     - name: Run tests
       env:
-        LOG_LEVEL: debug
         APPIUM_PORT: 4723
         APPIUM_HOST: localhost
+        LOG_LEVEL: info
       run: yarn test
