--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -22,12 +22,11 @@ jobs:
     - name: Install dependencies
       run: yarn install
 
-    - name: Set up JDK 11
+    - name: Set up JDK 17
       uses: actions/setup-java@v2
       with:
-        java-version: 11
         distribution: 'adopt'
-        cache: 'gradle'
+        java-version: '17'
 
     - name: Run connected tests
       uses: ReactiveCircus/android-emulator-runner@v2
