--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -34,6 +34,7 @@ jobs:
         api-level: 30
         target: google_apis
         arch: x86_64
+        script: echo "Created emulator"
 
     - name: Install Appium
       run: npm install -g appium
