--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -29,7 +29,7 @@ jobs:
         java-version: '17'
 
     - name: Install Appium
-      run: npm install -g appium
+      run: npm install -g appium@next
 
     - name: Run Appium
       run: appium &
