Added UIAutomator and Readme

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -2,6 +2,10 @@ name: Appium Tests
 
 on: [push, pull_request, workflow_dispatch]
 
+concurrency:
+  group: ${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   settings-tests:
     name: Settings Tests
