--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@types/mocha": "^10.0.1",
+    "@types/webdriverio": "^5.0.0",
     "dotenv": "^16.3.1",
     "mocha": "^10.2.0",
     "mochawesome": "^7.1.3",
